# yolo-llm-vision

./: .gitignore  README.md  hacs.json  pyproject.toml  repository.yaml
addon/: repository.yaml
addon/yolo_sidecar/: DOCS.md  Dockerfile  build.yaml  config.yaml  main.py  requirements.txt  run.sh
blueprints/automation/yolo_llm_vision/: camera_event_pipeline.yaml
custom_components/yolo_llm_vision/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  image.py  manifest.json  sensor.py  services.yaml  strings.json
docs/: blueprint.md  integration-testing.md  setup.md  sidecar.md
sidecar/: .env.example  Dockerfile  docker-compose.yml  main.py  requirements.txt
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_sidecar_logic.py
